--- a/borrador.Rmd
+++ b/borrador.Rmd
@@ -4,17 +4,34 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 ```
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+library(tidyverse)
+library(lubridate)
+library(forcats)
 library(dplyr)
 library(foreign)
 library(xtable)
 library(ggplot2)
 
+t1.2015 <- read.spss("D:\\Trabajo-Final-Turismo-Receptivo/R1T15.sav", to.data.frame = TRUE)
+na.omit(t1.2015)
+
+t2.2015 <- read.spss("D:\\Trabajo-Final-Turismo-Receptivo/R2T15.sav", to.data.frame = TRUE)
+
 t4.2015 <- read.spss("D:\\Trabajo-Final-Turismo-Receptivo/R4T15.sav", to.data.frame = TRUE)
+na.omit(t4.2015)
+
+t1.2014 <- read.spss("D:\\Trabajo-Final-Turismo-Receptivo/R1T14.sav", to.data.frame = TRUE)
+
+t2.2014 <- read.spss("D:\\Trabajo-Final-Turismo-Receptivo/R2T14.sav", to.data.frame = TRUE)
+
+t3.2014 <- read.spss("D:\\Trabajo-Final-Turismo-Receptivo/R3T14.sav", to.data.frame = TRUE)
+
+t4.2014 <- read.spss("D:\\Trabajo-Final-Turismo-Receptivo/R4T14.sav", to.data.frame = TRUE)
   
 ```
 
@@ -26,7 +43,10 @@ VISITANTES INGRESADOS A URUGUAY, POR ZONA DE DESTINO, ESTADÍA Y GASTO
 options(xtable.comment = FALSE)
 by_Destino <- t4.2015  %>%  mutate(Gasto= GTotal*coef) %>% mutate(Gente1= Gente*coef) %>% select(Destino, Gente1, Estadia, Gasto) %>% group_by(Destino) %>% summarise(n= sum(Gente1), dias= mean(Estadia), Gastos= sum(Gasto))
 
-destino <-  by_Destino %>% mutate(Gastos_P = Gastos/n) %>% mutate(Gastos_PDia = Gastos_P/dias ) %>% xtable()
+destino <-  by_Destino %>% mutate(Gastos_P = Gastos/n) %>% mutate(Gastos_PDia = Gastos_P/dias ) %>% mutate(value = (n/sum(n))*100) %>% xtable()
+
+destino2 <-  by_Destino %>% mutate(Porcentaje = (n/sum(n))*100)
+destino2 
 
 print(xtable(destino))
 
@@ -47,14 +67,16 @@ ggplot(destino)+
 ggplot(destino)+
   geom_col(aes(Destino,Gastos_PDia))
 
-ggplot(destino)+
-  geom_point(aes(dias,n,color=Destino, size=1))+
-  labs(y="Cantidad de visitantes")
-
-ggplot(destino)+
-  geom_point(aes(Gastos_P,dias,color=Destino))
 ```
 
+```{r, echo=FALSE}
+lugar <- c("Montevideo","Pta del Este","Litoral Termal","Colonia","Transito","Otros, S/D","Costa de Oro","Piriapolis","Costas Oceanicas")
+
+x <- destino2 %>% select(Destino,Porcentaje) %>% gather(Destino,Porcentaje)
+x
+ x %>% ggplot() + geom_col(aes(x=Destino, y= Porcentaje)) + scale_x_discrete(limits = lugar) + coord_flip()
+
+```
 
 VISITANTES INGRESADOS A URUGUAY, POR NACIONALIDAD, ESTADÍA Y GASTO
 
@@ -94,4 +116,54 @@ options(xtable.comment = FALSE)
  
 ```
 
+
+```{r,  warning=FALSE,message=FALSE,echo=TRUE}
+library(raster)
+
+uruguay <- getData("GADM", country = "UY", level = 0)
+
+uruguay_states <- getData("GADM", country = "UY", level = 1)
+
+uystates_UTM <-spTransform(uruguay_states, CRS("+init=EPSG:5383")) 
+NAME_1 <- uystates_UTM@data$NAME_1
+
+count <-   by_Destino %>% gruop_by(Destino) %>% select(n)
+
+count_df <- data.frame(NAME_1, count)
+
+uystates_UTM@data$id <- rownames(uystates_UTM@data)
+uystates_UTM@data <- plyr::join(uystates_UTM@data, count_df, by="NAME_1")
+uystates_df <- fortify(uystates_UTM)
+uystates_df <- plyr::join(uystates_df,uystates_UTM@data, by="id")
+
+uystates_df <-uystates_df %>% filter(!(NAME_1=="Rivera"& lat<6400000)) #un error en el mapa que hay que sacar
+theme_opts <- list(theme(panel.grid.minor = element_blank(),
+panel.grid.major = element_blank(),
+panel.background = element_blank(),
+plot.background = element_blank(),
+axis.line = element_blank(),
+axis.text.x = element_blank(),
+axis.text.y = element_blank(),
+axis.ticks = element_blank(),
+axis.title.x = element_blank(),
+axis.title.y = element_blank(),
+plot.title = element_blank()))
+```
+
+
+```{r}
+
+countunique <-uystates_df %>%
+group_by(NAME_1) %>%
+summarise(mlong = mean(long), mlat = mean(lat))
+
+
+ggplot() + 
+geom_polygon(data = uystates_df, aes(x = long, y = lat, group = group, fill =
+count), color = "black", size = 0.25) +
+geom_text(data =countunique ,aes(label = round(count,2), x = mlong, y = mlat))+
+theme(aspect.ratio = 1) + labs(fill = "Cantidad")+
+scale_fill_gradient2( midpoint = mean(count)) +
+theme_opts 
+```
 
