--- a/borrador.Rmd
+++ b/borrador.Rmd
@@ -6,6 +6,37 @@ output: pdf_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
+###__Introducción__
+
+El turismo es un fenómeno social, cultural y económico relacionado con el movimiento de personas a lugares que se encuentran fuera de su residencia habitual por motivos personales o de negocios/profesionales. Estas personas se denominan visitantes (pudiendo ser turistas o excursionistas; residentes o no residentes) y el turismo tiene que ver con sus actividades, de las cuales algunas implican un gasto turístico. El turismo receptivo, engloba las actividades realizadas por un visitante no residente en el país. 
+
+Como tal, el turismo tiene efectos en la economía, en el entorno natural, en las zonas edificadas, en la población local de los lugares visitados y en los visitantes propiamente dichos. Debido a este impacto, son requeridos una gran variedad de factores de la producción para obtener los bienes y servicios a ser adquiridos por los visitantes y al amplio espectro de agentes involucrados o afectados por el turismo. Es necesario adoptar un enfoque global del desarrollo, la gestión y la supervisión del turismo. Este enfoque es muy recomendable  con miras a la formulación y puesta en práctica de políticas de turismo nacionales y locales, así como de acuerdos internacionales u otros procesos en materia de turismo. 
+
+Desde hace poco más de doce años, la economía uruguaya ha mantenido un proceso de crecimiento sostenido, lo cual le ha permitido despegarse de los países de la región alcanzando el PIB per cápita más alto de América (información proveniente de CEPAL). En el año 2016 se computó un crecimiento de 1,5% en el Producto Interno Bruto (PIB). La inflación acumulada para el año 2017 se ubicó en 8,10% en términos interanuales.
+
+El peso del turismo en el año 2016 alcanzó el 7,3% del PIB, siendo la actividad de mayor impacto en las exportaciones de servicios, superando el 60%, y representando el 22% de las exportaciones totales del país.
+
+No queda duda de la importancia del turismo en un país como Uruguay, de hecho el Ministerio de Turismo Uruguayo cuenta con un portal web mediante el cual acceder a informes y bases de datos que remontan a hace más de 10 años, además de información sobre políticas y programas como INNOVATURISMO y otros, lo que facilita el acceso del público en general a los mismos. Pero si bien toda la información se encuentra al alcance de la mano, el formato en el que ésta se remite a los usuarios podría ser más efectivo.
+
+A medida que pasan los años la cantidad de datos que generan las empresas y entes del estado aumenta en forma exponencial por lo que estas se ven en la necesidad de aprender a manejarlos, procesarlos pero por sobre todo de presentarlos en forma resumida y comprensible.
+
+La visualización de datos no es algo nuevo. A lo largo de la década de los noventa y principios de los 2000 los medios de comunicación y las empresas incorporaron los infográficos impresos como una forma más clarificadora de representar los números. La novedad radica en que el usuario pueda interactuar con tales visualizaciones, un hecho que han posibilitado tanto internet como los avances tecnológicos relacionados con la programación informática.
+
+Entendemos por visualización de datos la presentación de datos en un formato pictórico o gráfico, esta permite a los tomadores de decisiones ver los análisis presentados visualmente, para que puedan captar conceptos difíciles o identificar nuevos patrones. Con la visualización interactiva, puede tomar el concepto un paso más allá mediante el uso de la tecnología para profundizar en gráficos y obtener más detalles, interactivamente cambiar los datos que vea y cómo se procesan.
+
+Debido a la forma en que el cerebro humano procesa la información, utilizar gráficos para visualizar grandes cantidades de datos complejos es más fácil que examinar las hojas de cálculo o los informes. La visualización de datos es una manera rápida y fácil de transmitir conceptos de una manera universal y poder experimentar con diferentes escenarios haciendo pequeños ajustes.
+
+Mediante la visualización de datos también se puede: identificar las áreas que necesitan atención o mejora, aclarar qué factores influyen en el comportamiento de turistas, ayuda a entender qué productos colocar en dónde y también a predecir volúmenes de ventas o ingresantes futuros.
+
+El objetivo de este proyecto es utilizar los datos disponibles de forma abierta en el portal http://mintur.gub.uy/index.php/estadisticas/base-de-datos y realizar un análisis exploratorio de los mismos para luego presentarlos de manera interactiva, ayudando de esa manera a otras personas interesadas en investigar con mayor profundidad el tema así como a aquellos usuarios que simplemente desean informarse sobre el mismo.
+
+Específicamente trabajaremos con el turismo receptivo, que es el cual engloba las actividades realizadas por un visitante no residente en el país.
+
+
+
+
+
+
 
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE, results='hide'}
@@ -17,95 +48,114 @@ library(dplyr)
 library(foreign)
 library(xtable)
 library(ggplot2)
+library(forcats)
 
 B2015 <- read.spss("D:\\Trabajo-Final-Turismo-Receptivo/R15.sav", to.data.frame = TRUE)
 na.omit(2015)
 
-
-t4.2015 <- read.spss("D:\\Trabajo-Final-Turismo-Receptivo/R4T15.sav", to.data.frame = TRUE)
-na.omit(t4.2015)
-
-  
 ```
 
 
-
-VISITANTES INGRESADOS A URUGUAY, POR ZONA DE DESTINO, ESTADIA Y GASTO
-
-```{r, echo=FALSE, results='asis'}
+```{r, echo=FALSE, results='asis', fig.height=5 , fig.width= 5}
 
 options(xtable.comment = FALSE)
-by_Destino <- B2015  %>%  mutate(Gasto= GTotal*coef) %>% mutate(Gente1= Gente*coef) %>% dplyr::select(Destino, Gente1, Estadia, Gasto) %>% group_by(Destino) %>% summarise(n= sum(Gente1), dias= mean(Estadia), Gastos= sum(Gasto))
+
+by_Destino <- B2015  %>%  mutate(Gasto= GTotal*coef) %>% mutate(Gente1= Gente*coef)%>% select(Destino, Gente1, Estadia, Gasto) %>% group_by(Destino) %>% summarise(n= round(sum(Gente1)), dias= weighted.mean(Estadia, Gente1), Gastos= sum(Gasto))
+
 
 destino <-  by_Destino %>% mutate(Gastos_P = Gastos/n) %>% mutate(Gastos_PDia = Gastos_P/dias ) %>% mutate(value = (n/sum(n))*100) %>% xtable()
 
-destino2 <- destino %>% mutate(Porcentaje = (n/sum(n))*100)
+destino2 <-  by_Destino %>% dplyr::mutate(Porcentaje = (n/sum(n))*100)
 
 count <- by_Destino %>% dplyr::select(Destino,n) 
 
 
-print(xtable(destino))
-
-ggplot(destino)+
-  geom_col(aes(Destino,n,fill=Destino))+
-  labs(y="Cantidad de visitantes")+ coord_flip()+ theme(legend.position="none")
-
-ggplot(destino)+
-  geom_col(aes(Destino,dias))+
-  coord_polar()
-
-ggplot(destino)+
-  geom_col(aes(Destino,Gastos))
-ggplot(destino)+geom_col(aes(Destino,Gastos_PDia))
-
-ggplot(destino)+ geom_col(aes(Destino,Gastos_P))
 ```
 
+__Algunos Resultados__
 
-
-
-```{r, echo=FALSE}
+```{r, echo=FALSE, fig.cap= "Proporción de visitantes ingresados a Uruguay según zona de destino"}
 
 x <- destino %>% select(Destino,value) %>% gather(Destino,value)
 
-x %>% ggplot() + geom_col(aes(x=fct_reorder(Destino,value, .desc = TRUE), y= value)) + coord_flip()+theme(legend.position="none")+labs(x = "Zona de destino", y = "Poroporción de turistas")+ theme_classic() 
+x %>% ggplot() + geom_col(aes(x=fct_reorder(Destino,value, .desc = TRUE), y= value), fill="green") + coord_flip()+theme(legend.position="none")+labs(x = "Zona de destino", y = "Poroporción de visitantes")+ theme_classic() 
 ```
 
-
-VISITANTES INGRESADOS A URUGUAY, POR NACIONALIDAD, ESTADIA Y GASTO
-
-```{r,echo= FALSE, results='asis'} 
+```{r, echo=FALSE, results='asis'}
 
 options(xtable.comment = FALSE)
 
- by_Nac <- t4.2015  %>%  mutate(Gasto= GTotal*coef) %>%  mutate(Gente1= Gente*coef) %>% select(Nac, Gente1, Estadia, Gasto) %>% group_by(Nac) %>% summarise(n= sum(Gente1), dias= mean(Estadia), Gastos= sum(Gasto))
- 
- nacionalidad <- by_Nac %>% mutate(Gastos_P = Gastos/n) %>% mutate(Gastos_PDia = Gastos_P/dias ) %>% xtable()
+by_Nacio <- B2015  %>% mutate(NACIONALIDAD= ifelse(Nac %in% c("Argentina"),"Argentina",ifelse(Nac %in% c("Brasil" ),"Brasil",ifelse(Nac %in% c("Uruguay" ),"Uruguay",ifelse(Nac %in% c( "EEUU", "Chile", "Paraguay", "Colombia", "México", "Perú", "Otro país América", "Venezuela", "Ecuador", "Canadá", "Bolivia", "Cuba"),"Otro país América", ifelse(Nac %in% c("País de África u Oceanía"),"País de África u Oceanía",ifelse(Nac %in% c( "Otro país Asia","Israel","Japón", "China"),"Asia", "Europa" ))))))) %>% dplyr::mutate(Gasto= GTotal*coef) %>% dplyr::mutate(Gente1= Gente*coef)%>% dplyr::mutate(Gente2= Gente*coeftot) %>% dplyr::select(NACIONALIDAD, Gente1,Gente2, Estadia, Gasto) %>% group_by(NACIONALIDAD) %>% summarise(n= round(sum(Gente1)), dias= weighted.mean(Estadia, Gente1), Gastos= sum(Gasto)) %>% mutate(value = (n/sum(n))*100)
 
-print(xtable(nacionalidad))
- 
+nacionalidad <-  by_Nacio %>% mutate(Gastos_P = Gastos/n) %>% mutate(Gastos_PDia = Gastos_P/dias ) %>% mutate(value = (n/sum(n))*100) %>% xtable()
+
 ```
 
-VISITANTES INGRESADOS A URUGUAY, POR ALOJAMIENTO UTILIZADO, ESTADIA Y GASTO
+```{r,echo=FALSE, fig.cap= "Proporción de visitantes ingresados a Uruguay según Nacionalidad"}
 
-```{r,echo= FALSE, results='asis'} 
+y <- by_Nacio %>% select(NACIONALIDAD,value) %>% gather(NACIONALIDAD,value)
 
- by_Aloja <- t4.2015  %>% mutate(Gente1= Gente*coef) %>%  mutate(Gasto= GTotal*coef) %>% select(Aloja, Gente1, Estadia, Gasto) %>% group_by(Aloja) %>% summarise(n= sum(Gente1), dias= mean(Estadia), Gastos= sum(Gasto))
- 
-alojamiento <- by_Aloja %>%  mutate(Gastos_P = Gastos/n) %>% mutate(Gastos_PDia = Gastos_P/dias )%>% xtable()
-
-print(xtable(alojamiento))
- 
- 
+y %>% ggplot() + geom_col(aes(x=fct_reorder(NACIONALIDAD,value, .desc = TRUE), y= value), fill="blue") + coord_flip()+theme(legend.position="none")+labs(x = "Nacionalidad", y = "Proporción de visitantes")+ theme_classic() 
 ```
 
-VISITANTES INGRESADOS A URUGUAY, POR ZONA DE INGRESO, ESTADIA Y GASTO
+```{r, echo=FALSE, results='asis'}
 
-```{r,echo=FALSE, results='asis'}
 options(xtable.comment = FALSE)
 
- x <-  by_Entro <- t4.2015  %>% mutate(Gente1= Gente*coef) %>% select(Entro, Gente1) %>% group_by(Entro) %>% summarise(n= sum(Gente1)) %>% xtable()
+by_movil <- B2015  %>%  dplyr::mutate(Gasto= GTotal*coef) %>% dplyr::mutate(Gente1= Gente*coef)%>% dplyr::mutate(Gente2= Gente*coeftot) %>% dplyr::select(TransIn, Gente1,Gente2, Estadia, Gasto) %>% group_by(TransIn) %>% summarise(n= round(sum(Gente1)), dias= weighted.mean(Estadia, Gente1), Gastos= sum(Gasto)) %>% mutate(value = (n/sum(n))*100)
+
+movilingreso <-  by_movil %>% mutate(Gastos_P = Gastos/n) %>% mutate(Gastos_PDia = Gastos_P/dias ) %>% mutate(value = (n/sum(n))*100) %>% xtable()
+
+Movi <-  by_movil %>% dplyr::mutate(Porcentaje = (n/sum(n))*100)
+
+count <- by_movil %>% dplyr::select(TransIn,n) 
+
+```
+
+
+
+```{r, echo=FALSE, fig.cap= "Proporción de visitantes ingresados a Uruguay según medio de ingreso al país"}
+
+z <- by_movil %>% select(TransIn,value) %>% gather(TransIn,value)
+
+z %>% ggplot() + geom_col(aes(x=fct_reorder(TransIn,value, .desc = FALSE), y= value), fill="orange") +theme(legend.position="none")+labs(x = "Transporte mediante el cual ingresó al país", y = "Proporción de visitantes")+ theme_classic()
  
- print(xtable(x))
- 
+```
+
+
+```{r, echo=FALSE, results='asis'}
+
+options(xtable.comment = FALSE)
+
+by_motivo <- B2015  %>%  mutate(MOTIVO= ifelse(Motivo %in% c("Ocio y Vacaciones."),"Ocio y Vacaciones",ifelse(Motivo %in% c("Visita Fliares. y Amigos"),"Visita Fliares. y Amigos",ifelse(Motivo %in% c("Trabajo/Profesional"),"Trabajo/Profesional",ifelse(Motivo %in% c("Transito"),"Transito", ifelse(Motivo %in% c("2da. Residencia"),"2da. Residencia", "Otros")))))) %>% dplyr::mutate(Gasto= GTotal*coef) %>% dplyr::mutate(Gente1= Gente*coef)%>% dplyr::mutate(Gente2= Gente*coeftot) %>% dplyr::select(MOTIVO, Gente1,Gente2, Estadia, Gasto) %>% group_by(MOTIVO) %>% summarise(n= round(sum(Gente1)), dias= weighted.mean(Estadia, Gente1), Gastos= sum(Gasto)) %>% mutate(value = (n/sum(n))*100)
+
+```
+
+
+```{r, echo=FALSE, fig.cap= "Proporción de visitantes ingresados a Uruguay según motivo de ingreso al país"}
+
+p <- by_motivo %>% select(MOTIVO,value) %>% gather(MOTIVO,value)
+
+p %>% ggplot() + geom_col(aes(x=fct_reorder(MOTIVO,value, .desc = TRUE), y= value)) +theme(legend.position="none")+labs(x = "Motivo de ingresó al país", y = "Proporción de visitantes")+ theme_classic() + coord_flip()
+
+
+```
+
+```{r, echo=FALSE, results='asis'}
+
+options(xtable.comment = FALSE)
+
+by_aloja <- B2015 %>% mutate(ALOJA =ifelse(Aloja %in% c("Holtel 1/2", "Hotel 3", "Hotel 4", "Hotel 5", "Hotel sin categorizar"), "Hotel", ifelse (Aloja %in% c("Vivienda propia"), "Vivienda propia", ifelse(Aloja %in% c("Vivienda arrendada"), "Vivienda arrendada", ifelse(Aloja %in% c("Viv. FLiares."),"Viviendas Familiares o amigos residentes", ifelse( Aloja %in% c("Vivienda Fliares. no residentes"), "Viviendas Familiares o amigos no residentes", ifelse(Aloja %in% c("Camping"), "Camping", ifelse (Aloja %in% c("Cabañas, Bungalow"), "Cabañas, Bungalow", ifelse (Aloja %in% c("Apart Hotel"), "Apart Hotel",ifelse (Aloja %in% c("Ninguno"), "Sin alojamiento", ifelse (Aloja %in% c("Tiempo Compartido"), "Tiempo Compartido", ifelse (Aloja %in% c("Estancia turistica"), "Estancia turistica", ifelse(Aloja %in% c("Hostel"), "Hostal,Hostel, Albergue", "Otros-Sin Datos"))))))))))))) %>% dplyr::mutate(Gasto= GTotal*coef) %>% dplyr::mutate(Gente1= Gente*coef)%>% dplyr::mutate(Gente2= Gente*coeftot) %>% dplyr::select(ALOJA, Gente1,Gente2, Estadia, Gasto) %>% group_by(ALOJA) %>% summarise(n= round(sum(Gente1)), dias= weighted.mean(Estadia, Gente1), Gastos= sum(Gasto)) %>% mutate(value = (n/sum(n))*100)
+
+
+```
+
+
+```{r, echo=FALSE, fig.cap= "Proporción de visitantes ingresados a Uruguay según alojamiento utilizado durante su estadía en el país"}
+
+r <- by_aloja %>% select(ALOJA,value) %>% gather(ALOJA,value)
+
+r %>% ggplot() + geom_col(aes(x=fct_reorder(ALOJA,value, .desc = TRUE), y= value), fill= "Red") +theme(legend.position="none")+labs(x = "Alojamiento utilizado durante su estadía en el país", y = "Proporción de visitantes")+ theme_classic() + coord_flip()
+
+
 ```
