--- a/borrador.Rmd
+++ b/borrador.Rmd
@@ -1,8 +1,6 @@
 ---
 title: "Turismo Receptivo Uruguayo"
-output:
-  pdf_document: default
-  word_document: default
+output: pdf_document 
 ---
 
 ```{r setup, include=FALSE}
