--- a/borrador.Rmd
+++ b/borrador.Rmd
@@ -4,7 +4,7 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(fig.width=5, fig.height=5)
+knitr::opts_chunk$set(echo = FALSE, fig.pos = 'hbpt', message = FALSE, warning = FALSE)
 ```
 ###__Introducción__
 
